--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -9,6 +9,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Noto Sans", sans-serif;
+  // background: pink;
 }
 
 .navbar_brand {
@@ -25,13 +26,7 @@
   margin: auto;
   padding: 10px 30px;
   .logo img {
-    width: 65%;
-    @media (max-width: 900px) {
-      width: 75%;
-    }
-    @media (max-width: 1200px) {
-      width: 100%;
-    }
+    width: 180px;
   }
   .open_menu {
     display: none;
@@ -41,7 +36,7 @@
       cursor: pointer;
       display: flex;
       i {
-        font-size: 35px;
+        font-size: 30px;
       }
     }
   }
@@ -62,7 +57,7 @@
       display: none;
       position: fixed;
       right: 0;
-      width: 70%;
+      width: 50%;
       height: 100vh;
       margin-top: 0;
       top: 0;
@@ -78,7 +73,7 @@
       li {
         @media (max-width: 1200px) {
           @include collaborate;
-          align-items: center;
+          // align-items: center;
           padding: 15px;
           color: #ffffff;
         }
@@ -236,12 +231,17 @@
     margin-top: 110px;
     transform: translate(57%, 50%);
     border-radius: 5px;
+    @media (max-width: 320px) {
+      margin-top: 130px;
+    }
+
     @media (max-width: 900px) {
       background-color: $white;
       width: 90%;
       transform: translate(4%, -70%);
       height: 50px;
     }
+
     &:hover {
       color: $blue;
       cursor: pointer;
@@ -254,6 +254,9 @@
       outline: none;
       padding: 15px;
       border-color: transparent;
+      @media (max-width: 320px) {
+        width: 50%;
+      }
     }
   }
 
@@ -280,6 +283,12 @@
     @media (max-width: 1440px) {
       margin: 0 180px;
     }
+    @media (max-width: 1444px) {
+      margin: 0 190px;
+    }
+    @media (max-width: 1388px) {
+      margin: 0 180px;
+    }
     @media (max-width: 1365px) {
       margin: 0 150px;
     }
@@ -295,11 +304,20 @@
     @media (max-width: 1085px) {
       margin: 0 100px;
     }
-    @media (max-width: 1045px) {
-      margin: 0 80px;
+    @media (max-width: 1040px) {
+      margin: 0 90px;
+    }
+    @media (max-width: 1024px) {
+      margin-top: 0 100px;
+    }
+    @media (max-width: 1005px) {
+      margin: 0 50px;
     }
     @media (max-width: 965px) {
-      margin: 0 60px;
+      margin: 0 80px;
+    }
+    @media (max-width: 960px) {
+      margin: 0 50px;
     }
 
     ul {
@@ -329,13 +347,28 @@
     position: absolute;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    transform: translate(0, 300%);
+    gap: 10px;
+    transform: translate(0, 330%);
+
+    @media (max-width: 1220px) {
+      transform: translate(0, 400%);
+    }
     @media (max-width: 900px) {
-      // margin-top: -70px;
-      transform: translate(0, 60%);
+      transform: translate(0, 70%);
       display: inline-block;
       text-align: center;
     }
+    @media (max-width: 768px) {
+      transform: translate(0, 80%);
+    }
+    @media (max-width: 500px) {
+      transform: translate(0, 100%);
+    }
+
+    @media (max-width: 320px) {
+      transform: translate(0, 120%);
+    }
+
     .google {
       display: flex;
       align-items: center;
@@ -346,6 +379,7 @@
         justify-self: flex-end;
         margin-bottom: 20px;
       }
+
       img {
         width: 30px;
         @media (max-width: 900px) {
@@ -366,42 +400,50 @@
     .google_play {
       display: block;
       p {
-        font-size: 14px;
+        font-size: 15px;
         letter-spacing: -1px;
         font-weight: bold;
-        margin: 0 5px -18px 50px;
-        @media (max-width: 900px) {
-          font-size: 30px;
+        margin-left: 30px;
+        margin-bottom: -16px;
+        @media (max-width: 1280px) {
           margin-left: 10px;
+          margin-bottom: -10px;
+        }
+        @media (max-width: 1220px) {
+          font-size: 13px;
+          margin-bottom: -12px;
+          margin-left: 15px;
+        }
+        @media (max-width: 1024px) {
+          margin-left: 5px;
+        }
+        @media (max-width: 900px) {
+          margin-left: 5px;
           margin-bottom: -40px;
+          font-size: 25px;
+        }
+        @media (max-width: 500px) {
+          font-size: 20px;
+          margin-bottom: -20px;
+        }
+        @media (max-width: 320px) {
+          font-size: 15px;
+          margin-bottom: -15px;
         }
       }
       img {
-        width: 35%;
-        height: 100%;
+        width: 33%;
         @media (max-width: 900px) {
-          width: 75%;
+          width: 600px;
+        }
+        @media (max-width: 320px) {
+          width: 280px;
+        }
+        @media (max-width: 500px) {
+          width: 80%;
         }
       }
     }
-    // @media (max-width: 500px) {
-    //   top: -30px;
-    //   .google_play {
-    //     margin-top: 30px;
-    //     img {
-    //       width: 90%;
-    //     }
-    //     p {
-    //       font-size: 22px;
-    //       margin-left: 10px;
-    //       margin-bottom: -30px;
-    //       letter-spacing: -1px;
-    //     }
-    //   }
-    // }
-    // @media (max-width: 600px) {
-    //   top: 60px;
-    // }
   }
 }
 
@@ -409,7 +451,8 @@
   display: grid;
   grid-template-columns: 1fr 2.5fr;
   gap: 50px;
-  margin: 40px;
+  margin-top: -100px;
+  padding: 50px;
   @media (max-width: 900px) {
     display: block;
   }
@@ -466,125 +509,47 @@
   }
 }
 
-// @media (max-width: 1200px) {
-// .navbar_brand {
-// .logo {
-//   width: 145%;
-// }
-// .open_menu {
-//   display: inline;
-//   justify-self: end;
-//   cursor: pointer;
+.business {
+  h2 {
+    font-size: 38px;
+    padding: 1.5em;
+    color: $gray;
+  }
+  span {
+    color: $blue;
+  }
+}
 
-//   i {
-//     font-size: 35px;
-//   }
-// }
-// .close_menu {
-//   font-size: 35px;
-//   margin-left: 40px;
-//   cursor: pointer;
-//   color: #ffffff;
-// }
-// .navbar {
-//   display: none;
-//   position: fixed;
-//   right: 0;
-//   width: 70%;
-//   height: 100vh;
-//   margin-top: 0;
-//   top: 0;
-//   background-color: #15426d;
-//   // z-index: 1000;
-//   padding: 15px 0;
-// ul {
-//   display: block;
-
-//   li {
-//     @include collaborate;
-//     align-items: center;
-//     padding: 15px;
-//     color: #ffffff;
-//     a {
-//       color: #ffffff;
-//       font-weight: normal;
-//     }
-//     .drop {
-//       width: 100%;
-//       position: relative;
-//       opacity: 1;
-//       left: 0;
-//       width: 100%;
-//     }
-//   }
-// }
-// .fa-whatsapp {
-//   color: #ffffff;
-//   font-size: 30px;
-//   p {
-//     color: #ffffff;
-//     font-weight: normal;
-//   }
-// }
-// .fa-phone {
-//   color: #ffffff;
-//   font-size: 30px;
-//   p {
-//     color: #ffffff;
-//     font-weight: normal;
-//   }
-// }
-//   .btn {
-//     button {
-//       background-color: #ff9f1c;
-//       &:hover {
-//         background: #1b3b6f;
-//       }
-//     }
-//   }
-// }
-//   .open_menu,
-//   .close_menu {
-//     display: flex;
-//   }
-// }
-// }
-// @media (max-width: 900px) {
-//   .search_bar {
-// background-image: url(/asset/images/background_img.png);
-// width: 100%;
-// .popular {
-// display: none;
-// }
-// .search_box {
-//   background-color: $white;
-//   width: 90%;
-//   transform: translate(4%, -70%);
-//   // justify-content: space-evenly;
-//   height: 50px;
-// }
-// .moblie_app {
-//   transform: translate(0, 90%);
-//   display: inline-block;
-//   text-align: center;
-// }
-// .google {
-//   justify-content: center;
-//   justify-self: flex-end;
-//   margin-bottom: 20px;
-//   img {
-//     width: 40px;
-//   }
-//   .stars {
-//     display: flex;
-//     align-items: center;
-//     color: #ff7d00;
-//   }
-// }
-//     .google_play {
-//       img {
-//         width: 75%;
-//       }
-//     }
-//   }
-// }
+.working_process_container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  .working_text {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    .vertical-text {
+      writing-mode: vertical-lr;
+      letter-spacing: 12px;
+      font-size: 25px;
+      padding: 1em;
+      color: $gray;
+    }
+    .working_process {
+      padding: 5em;
+      h3 {
+        font-size: 40px;
+        margin-bottom: 30px;
+        color: $blue;
+      }
+      p {
+        font-size: 19px;
+        font-weight: 500;
+        line-height: 32px;
+      }
+    }
+  }
+  .iframe iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
