landing page finished

--- a/color.scss
+++ b/color.scss
@@ -1,8 +1,8 @@
-$myViolet:#6910EF;
-$myGrey:rgb(99, 97, 97);
+$myViolet:#eae7dc; 
+$myGrey:#e85a4f;
 $myWhite:white;
 $myGreen:rgb(55, 212, 55);
 $myBlue:rgb(8, 8, 187);
 $myLightviolet:rgb(128, 63, 214);
-$myLightgrey:rgb(218, 215, 215);
-$myMidgrey:rgb(157, 155, 155) ;
+$myLightgrey:#4e4e50;
+$myMidgrey:#d8c3a5 ;
