--- a/kowshik.scss
+++ b/kowshik.scss
@@ -20,8 +20,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 0 20px 0.1px $myMidgrey;
-    background-color: $myLightgrey;
+    box-shadow: 0 0 20px 0.1px $myLightgrey;
+    background-color: $myViolet;
     position: fixed;
     top: 0;
     left: 0;
@@ -49,7 +49,7 @@
             cursor: pointer;
             font-size: 18px;
             font-weight: 400;
-            color: $myGrey;
+            color: $myLightgrey;
         }
 
         button {
@@ -58,14 +58,14 @@
             height: 30px;
             border-radius: 13px;
             border: none;
-            background-color: $myViolet;
+            background-color: $myGrey;
             outline: none;
             color: $myWhite;
             font-size: 16px;
         }
 
         button:hover {
-            background-color: $myLightgrey;
+            background-color: $myWhite;
             color: $myViolet;
             border: 1px solid $myViolet;
         }
@@ -92,7 +92,7 @@
     }
 
     .topbar-list p:hover {
-        color: $myViolet;
+        color: $myGrey;
     }
 
     .sub1-menu {
@@ -122,7 +122,7 @@
         }
     }
 
-    .sub1:hover .sub1-menu ul li a {
+    p:hover .sub1-menu  {
         display: block;
     }
 }
@@ -136,7 +136,7 @@
     align-items: center;
     height: 40px;
     border-radius: 13px;
-    border: 1px solid $myLightgrey;
+    border: 1px solid $myMidgrey;
 
     input {
         width: 100%;
@@ -151,7 +151,7 @@
 
     i {
         padding: 10px;
-        color: $myViolet;
+        color: $myGrey;
         cursor: pointer;
     }
 
@@ -183,15 +183,16 @@ h2 {
 
       li {
         p {
+            cursor: pointer;
           background-color: $myLightgrey;
           font-weight: bold;
           font-size: 15px;
           border-radius: 10px;
           margin: 4px 7px;
           padding: 6px;
-          color: $myGrey;
+          color: $myViolet;
           &:hover {
-            background: $myViolet;
+            background: $myGrey;
             color: $myWhite;
 
           }
@@ -214,20 +215,20 @@ h2 {
 
         background-color: $myLightgrey;
         width: 400px;
-
+        box-shadow: 0 2px 10px 0 $myLightgrey ;
         border-radius: 13px;
 
         h1 {
             padding: 1em;
-            font-size: 30px;
-            color: $myViolet;
+            font-size: 35px;
+            color: $myGrey;
         }
 
         p {
             padding: 20px;
             font-size: 18px;
             line-height: 1.2em;
-            color: $myGrey;
+            color: $myViolet;
         }
 
 
@@ -237,6 +238,7 @@ h2 {
     .blog-box1 {
         width: 280px;
         animation: pulse 1.5s ease-out infinite;
+        box-shadow: 0 2px 10px 0 $myMidgrey ;
 
         @keyframes pulse {
             50% {
@@ -245,7 +247,7 @@ h2 {
         }
 
         border-radius: 13px;
-        background-color: $myMidgrey;
+        background-color: $myViolet;
         z-index: -200;
 
 
@@ -253,7 +255,7 @@ h2 {
         h1 {
             padding: 1em;
             font-size: 30px;
-            color: $myViolet;
+            color: $myLightgrey;
             text-align: center;
         }
 
@@ -261,7 +263,7 @@ h2 {
             padding: 20px;
             font-size: 18px;
             line-height: 1.2em;
-            color: $myWhite;
+            color: $myGrey;
         }
     }
 
@@ -273,14 +275,15 @@ h2 {
 
 .faith {
     h1 {
-        font-size: 40px;
+        font-size: 43px;
         padding: 2em;
-        color: $myGrey;
+        color: $myLightgrey;
 
     }
 
     span {
-        color: $myViolet;
+        color: $myGrey;
+        font-family: 'Kaushan Script', cursive;
     }
 
 
@@ -305,7 +308,7 @@ h2 {
             letter-spacing: 12px;
             font-size: 25px;
             padding: 2em;
-            color: $myLightgrey;
+            color: $myViolet;
 
         }
 
@@ -316,15 +319,15 @@ h2 {
             h3 {
                 font-size: 45px;
                 margin-bottom: 30px;
-                color: $myViolet;
+                color: $myGrey;
 
             }
 
             p {
-                font-size: 17px;
+                font-size: 19px;
                 font-weight: 200;
                 line-height: 1em;
-                color: $myGrey;
+                color: $myLightgrey;
             }
         }
 
@@ -348,24 +351,30 @@ h2 {
 
     .service-list {
         display: flex;
+        
 
 
 
         .service-box {
+            
+            
 
             a {
+                margin-bottom: 7px;
+                border-radius: 10px;
                 display: block;
                 background-color: $myLightgrey;
                 font-size: 20px;
                 line-height: 50px;
                 padding-left: 10px;
                 padding-right: 10px;
+                color: $myWhite;
             }
 
 
             a:hover {
                 background-color: $myViolet;
-                color: $myWhite;
+                color: $myLightgrey;
             }
 
 
@@ -393,7 +402,7 @@ h2 {
     }
 
     .registration-box {
-        background-color: white;
+        background-color: $myViolet;
         margin-left: 55px;
         border-radius: 13px;
 
@@ -406,6 +415,7 @@ h2 {
             align-items: center;
             margin: auto;
             padding: 10px;
+            
 
         }
 
@@ -415,12 +425,12 @@ h2 {
             text-align: center;
             margin-bottom: 30px;
             margin-top: 20px;
-            color: $myViolet;
+            color: $myGrey;
         }
 
         p {
             text-align: center;
-            color: $myGrey;
+            color: $myLightgrey;
             margin-bottom: 30px;
             font-size: 17px;
             line-height: 1.5em;
@@ -437,7 +447,7 @@ h2 {
             height: 30px;
             border-radius: 13px;
             border: none;
-            background-color: $myViolet;
+            background-color: $myGrey;
             outline: none;
             color: $myWhite;
             font-size: 16px;
@@ -470,7 +480,7 @@ h2 {
     grid-template-columns: 25% 25% 25% 25%;
 
     background-color: $myLightgrey;
-
+     
 
 
 
@@ -481,7 +491,7 @@ h2 {
         justify-content: center;
         height: 100%;
         border-right: 1px solid $myGrey;
-        color: $myGrey;
+        color: $myWhite;
         cursor: pointer;
 
 
@@ -493,7 +503,7 @@ h2 {
     }
 
     .user-list:hover {
-        background-color: $myViolet;
+        background-color: $myGrey;
         color: $myWhite;
     }
 
@@ -509,10 +519,11 @@ h2 {
     font-weight: 400;
     text-align: center;
     padding: 2em;
-    color: $myGrey;
+    color: $myLightgrey;
 
     span {
-        color: $myViolet;
+        color: $myGrey;
+        font-family: 'Kaushan Script', cursive;
     }
 }
 
@@ -564,9 +575,43 @@ h2 {
         flex-direction: column;
         justify-content: center;
         text-align: right;
+        
+
+
+        .lines{
+            display: flex;
+            justify-content: right;
+            margin-top: 10px ;
+        }
+
+        .line{
+            padding: 1.5px 10px ;
+            margin: 0 3px;
+            background-color: $myGrey;
+            cursor: pointer;
+            transition: backgroud-color 0.3s ease;
+        }
+
+        .line:hover{
+            background-color: $myLightgrey;
+        }
 
 
         .slide1 {
+            display: none;
+            animation-name: fadeout;
+            animation-duration: 1.5s;
+            @keyframes fade {
+                from{
+                    opacity: 0.5;
+                }
+                to{
+                    opacity: 1;
+                }
+            }
+
+
+    
 
             .image1 {
                 padding-bottom: 20px;
@@ -606,13 +651,94 @@ h2 {
 
     p {
         font-size: 18px;
-        color: $myGrey;
+        color: $myLightgrey;
         margin-bottom: 10px;
     }
 
     h6 {
         font-size: 20px;
-        color: $myViolet;
+        color: $myMidgrey;
+    }
+}
+
+.visit-line{
+    padding: 2em;
+    font-size: 23px;
+
+    span{
+        color: $myGrey;
+    }
+}
+
+.article-list{
+    display :grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+    padding: 2em;
+
+    .square{
+        background-color: $myLightgrey;
+        padding: 1em;
+        border-radius: 12px;
+        cursor: pointer;
+
+       .fa-user-graduate{
+           font-size: 25px;
+           color: $myGrey;
+           padding-right: 10px;
+       }
+       i{
+           font-size: 16px;
+           
+       }
+
+       span{
+           color: $myMidgrey;
+       }
+
+      button{
+          padding:4px 5px;
+          border-radius: 6px;
+          border: none;
+          outline: none;
+          margin-top: 80px;
+          margin-bottom: 20px;
+          font-size: 14px;
+          background-color: $myGrey;
+          color: $myWhite;
+          cursor: pointer;
+      }
+
+      h3{
+         color: $myWhite;
+      }
+
+      p{
+          color: $myGrey;
+      }
+
+
+
+
+    }
+}
+
+.read{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+
+    button{
+        cursor: pointer;
+          padding :8px 25px;
+          font-size: 20px;
+          border-radius: 13px;
+          outline: none;
+          border: none;
+          background-color: $myLightgrey;
+          color: $myGrey;
     }
 }
 
@@ -631,7 +757,8 @@ h2 {
 
 
     span {
-        color: $myViolet;
+        color: $myLightgrey;
+        
     }
 
     h1 {
@@ -664,7 +791,7 @@ h2 {
         outline: none;
         background: none;
         color: $myWhite;
-        background-color: $myViolet;
+        background-color: $myLightgrey;
         font-size: 17px;
         cursor: pointer;
     }
@@ -696,7 +823,7 @@ h2 {
 
             .fa-brands {
                 font-size: 25px;
-                color: $myViolet;
+                color: $myMidgrey;
                 cursor: pointer;
             }
 
@@ -736,7 +863,7 @@ h2 {
             font-size: 20px;
             font-weight: 700;
             margin-bottom: 20px;
-            color: $myViolet;
+            color: $myMidgrey;
         }
 
         a {
@@ -775,7 +902,8 @@ h2 {
 
     }
 
-    p {
+    p { 
+        color: $myMidgrey;
         margin-top: 40px;
         text-align: center;
     }
